backend frontend finished with spring security, Jwt Token and auth guard
