# book-network-ui/src/app/services/models/book-request.ts
@@ -3,9 +3,10 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 export interface BookRequest {
+  id?: number;
   authorName: string;
   isbn: string;
-  sharable?: boolean;
   synopsis: string;
   title: string;
+  sharable?: boolean;
 }
